feat(routing): allow avoiding ferries
